@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)n7.c	1.40 (gritter) 12/6/05
+ * Sccsid @(#)n7.c	1.41 (gritter) 1/31/06
  */
 
 /*
@@ -524,7 +524,7 @@ newline(int a)
 			dip->dnl += dip->alss;
 			dip->alss = 0;
 		}
-		if (dip->ditrap && !dip->ditf && dip->dnl >= dip->ditrap && dip->dimac)
+		if (vpt > 0 && dip->ditrap && !dip->ditf && dip->dnl >= dip->ditrap && dip->dimac)
 			if (control(dip->dimac, 0)) {
 				trap++; 
 				dip->ditf++;
@@ -544,7 +544,7 @@ newline(int a)
 	pchar1((tchar)'\n');
 	flss = 0;
 	lss = j;
-	if (numtab[NL].val < pl)
+	if (vpt == 0 || numtab[NL].val < pl)
 		goto nl2;
 nl1:
 	ejf = dip->hnl = numtab[NL].val = 0;
@@ -584,7 +584,9 @@ nlpn:
 	}
 nl2:
 	trap = 0;
-	if (numtab[NL].val == 0) {
+	if (vpt <= 0)
+		/*EMPTY*/;
+	else if (numtab[NL].val == 0) {
 		if ((j = findn(0)) != NTRAP)
 			trap = control(mlist[j], 0);
 	} else if ((i = findt(numtab[NL].val - nlss)) <= nlss) {
@@ -680,6 +682,14 @@ eject(struct s *a)
 
 	if (dip != d)
 		return;
+	if (vpt == 0) {
+		if (donef == 0) {
+			errprint("page not ejected because traps are disabled");
+			return;
+		}
+		errprint("page forcefully ejected although traps are disabled");
+		vpt = -1;
+	}
 	ejf++;
 	if (a)
 		ejl = a;
