@@ -5,6 +5,8 @@ Release ...
   the ASCII range. A "%xx" escape sequence, where "xx" are hexadecimal
   digits, has been introduced in order to achieve this. The description
   of ".fp" in the "NEWS" file contains details on this.
+* [nt]roff: The ".vpt" request has been added to make it possible to
+  disable vertical position traps.
 * dpost: When a font was mounted replacing another font on the same
   physical position, non-ASCII characters were not printed correctly
   afterwards (bug reported by Vladimir B. Machulsky).
